| Bug #28899 | not possible to set separate watchdog timeout at startup | ||
|---|---|---|---|
| Submitted: | 5 Jun 2007 16:55 | Modified: | 11 Jun 2007 23:08 |
| Reporter: | Tomas Ulin | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | OS: | Any | |
| Assigned to: | Tomas Ulin | Target Version: | |
[5 Jun 2007 16:55]
Tomas Ulin
[5 Jun 2007 17:09]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/28127
[11 Jun 2007 13:39]
Bugs System
Pushed into 5.1.20-beta
[11 Jun 2007 23:08]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available version,
including the bug fix. More information about accessing the source trees is available at
http://dev.mysql.com/doc/en/installing-source.html
Documented new cluster configuration parameter in 5.1.20 changelog and Defining Data Nodes
section of Cluster chapter in 5.1 Manual.
[3 Jul 2007 8:47]
Jon Stephens
Also documented for telco-6.2.3 release.
