Bug #28899  	not possible to set separate watchdog timeout at startup